@@ -621,7 +621,8 @@
 7) kernel: ralink_hw_nat: do not touch MT7620 ESW P6/P7 PCR for case dumb switch.<br>
 8) kernel: mips: avoid mcheck by flushing page range in huge_ptep_set_access_flags().<br>
 9) kernel: mips: fix branch emulation of branch likely instructions.<br>
-10) kernel: net: fix stacked vlan offload features computation.<br>
+10) kernel: mips: add option to disable software I/O  coherency.<br>
+11) kernel: net: fix stacked vlan offload features computation.<br>
 <br>
 <br>
 <b>TODO:</b><br>
